manifest/04_INGRESSROUTE/none_host/001_dashboard.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard-ingressroute
  namespace: api-gateway-system
spec:
  entryPoints:
    - traefik
  routes:
    - match: PathPrefix(`/api`, `/dashboard`, `/`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: dashboard-auth@file
  tls: {} # use default tls
